Use a JDK 8-compatible method in unit test
Original Pull Request: #4459